k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartap
  labels:
    name: smartap
    app: smartap
    environment: production
